# care_token_display

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: index.md  installation.md  usage.md
scripts/: generate_placeholder_fragments.py
src/token_display/: __init__.py  apps.py  authentication.py  device.py  pages.py  settings.py  signals.py  spec.py  tts.py  urls.py  utils.py  views.py
src/token_display/templates/token_display/: device.html  display.html  partial.html
src/token_display/views/: device.py  sub_queues.py
